WanaLyzer/out/numpy/typing/tests/data/pass/numeric.pyi
import numpy as np
from _typeshed import Incomplete

class SubClass(np.ndarray): ...

i8: Incomplete
A: Incomplete
B: list[list[list[int]]]
C: Incomplete
