WanaLyzer/out/numpy/typing/tests/data/fail/shape_base.pyi
import numpy as np

class DTypeLike:
    dtype: np.dtype[np.int_]

dtype_like: DTypeLike
